--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "企业项目管理系统",
   "short_name": "项目管理",
   "description": "高效的项目与资源管理工具，支持离线访问。",
-  "start_url": "./index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#f8f9fa",
   "theme_color": "#4f46e5",
